Fix some css issues with post listings going off screen

--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@
 
 @media screen and (min-width: 62em) {
   .full-height {
-    height: 100%;
+    min-height: 100%;
     padding-bottom: 16px;
   }
-  .sticky-bottom {
-    position: absolute;
+  .fixed-bottom {
+    position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
+    /*width: 100%;*/
   }
 }
 .full-height-sm {
